# UselessBox

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py  test.py
berlekamp_decode_simulation/: Berlekamp_decode_simulation.ipynb  Berlekamp_decode_simulation.py  RS_255_223_33.mat  RS_255_239_17.mat
berlekamp_decode_simulation/.ipynb_checkpoints/: Berlekamp_decode_simulation-checkpoint.ipynb
berlekamp_tools/: Berlekamp.cpp  Berlekamp.h  Euclidean.cpp  Euclidean.hpp  RS255.i  setup.py
berlekamp_tools/GF256/: GF256.h  GF256_num_list.h  GF256_poly.cpp  GF256_poly.h
berlekamp_tools/decode/: Berlekamp_Decoder.cpp  Berlekamp_Decoder.hpp  Euclidean_Decoder.cpp  Euclidean_Decoder.hpp  RS255_Key_Equation_Decoder.cpp  RS255_Key_Equation_Decoder.hpp
csrc/GF256/: GF256.cpp  GF256_num_list.cpp  GF256_poly.cpp  GF256_poly.h
csrc/cpp2py/: cpp2py.cpp
csrc/decode/: Berlekamp_Decoder.cpp  Berlekamp_Decoder.hpp  Euclidean_Decoder.cpp  Euclidean_Decoder.hpp  RS255_Key_Equation_Decoder.cpp  RS255_Key_Equation_Decoder.hpp
examples/: Berlekamp_decode_simulation.ipynb  Berlekamp_decode_simulation.py
rs_decoder/: RS255.py
